# diffgate

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml  demo.yml  release.yml
bench/: catch_rate.json  silent_lie_trace.jsonl
docs/: demo.tape
examples/: claim_file_schema.json  claude_code_hook.md  cursor_integration.md
src/diffgate/: __init__.py  bench.py  cli.py  mcp_server.py  parsers.py  verifier.py
tests/: test_v0_4_0_language_fixes.py  test_v0_5_0_verifier_fixes.py  test_v0_6_0_fixes_and_diff.py  test_verifier.py
tests/fixtures/: silent_lie_cases.json
web/: site.json
