[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "diffgate"
version = "0.3.0"
description = "Structural verification gate for coding agents — fails the agent loop when claimed edits don't match the AST diff."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "supermario_leo", email = "leo.stack@outlook.com" },
]
keywords = [
    "coding-agent",
    "agentic",
    "agent",
    "mcp",
    "tree-sitter",
    "verification",
    "cursor",
    "claude-code",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "tree-sitter>=0.23,<0.25",
    "tree-sitter-language-pack>=0.7,<0.8",
    "typer>=0.12",
    "mcp>=1.2",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[project.scripts]
diffgate = "diffgate.cli:app"

[project.urls]
Homepage = "https://github.com/supermario-leo/diffgate"
Repository = "https://github.com/supermario-leo/diffgate"
Issues = "https://github.com/supermario-leo/diffgate/issues"
Changelog = "https://github.com/supermario-leo/diffgate/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/diffgate"]

[tool.hatch.build.targets.sdist]
include = [
    "src/diffgate",
    "tests",
    "examples",
    "README.md",
    "README.en.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
